[gd_scene load_steps=7 format=3 uid="uid://bx0juwyyq5c1f"]

[ext_resource type="Script" path="res://scripts/app_menu.gd" id="1_4hdf0"]
[ext_resource type="Texture2D" uid="uid://di500bs38rm88" path="res://Background/Background-Blue.png" id="1_wdppw"]
[ext_resource type="Texture2D" uid="uid://c0y0ag3fhtevr" path="res://SpriteChar/TaraLaro icon.png" id="1_ysbe2"]
[ext_resource type="Texture2D" uid="uid://cewdqd5yvcpop" path="res://SpriteChar/sprite.png" id="2_i3abm"]
[ext_resource type="Texture2D" uid="uid://ke7x4fs0ng8y" path="res://Buttons/Back.png" id="3_x0b3n"]
[ext_resource type="FontFile" uid="uid://cep1aaxoo74up" path="res://Font/Lemon Days.ttf" id="4_8yghb"]

[node name="AppMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hdf0")

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Control2"]
position = Vector2(360, 680)
texture = ExtResource("1_wdppw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sipa" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(77, 261)
scale = Vector2(0.336478, 0.336478)
texture_normal = ExtResource("1_ysbe2")

[node name="Label" type="Label" parent="CanvasLayer/Sipa"]
offset_left = 222.897
offset_top = 650.86
offset_right = 291.897
offset_bottom = 690.86
theme_override_colors/font_color = Color(0.972549, 0.537255, 0.137255, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("4_8yghb")
theme_override_font_sizes/font_size = 100
text = "Sipa"

[node name="Eme" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(437, 261)
scale = Vector2(0.339623, 0.339623)
texture_normal = ExtResource("1_ysbe2")

[node name="Label2" type="Label" parent="CanvasLayer/Eme"]
offset_left = 220.833
offset_top = 644.833
offset_right = 394.833
offset_bottom = 774.833
theme_override_colors/font_color = Color(0.972549, 0.537255, 0.137255, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("4_8yghb")
theme_override_font_sizes/font_size = 100
text = "EME"
vertical_alignment = 1

[node name="Black" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(8, 192)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Black"]
position = Vector2(176, 488)
scale = Vector2(0.33805, 0.33805)
texture = ExtResource("1_ysbe2")

[node name="Label3" type="Label" parent="CanvasLayer/Black"]
offset_left = 144.0
offset_top = 600.0
offset_right = 213.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(0.972549, 0.537255, 0.137255, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_8yghb")
theme_override_font_sizes/font_size = 30
text = "None"

[node name="Blamk" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(8, 192)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Blamk"]
position = Vector2(536, 488)
scale = Vector2(0.33805, 0.33805)
texture = ExtResource("1_ysbe2")

[node name="Label4" type="Label" parent="CanvasLayer/Blamk"]
offset_left = 504.0
offset_top = 600.0
offset_right = 573.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(0.972549, 0.537255, 0.137255, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_8yghb")
theme_override_font_sizes/font_size = 30
text = "None"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Sprite2D" type="Sprite2D" parent="Control/VBoxContainer"]
position = Vector2(360, 56)
scale = Vector2(9, 1)
texture = ExtResource("2_i3abm")

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control"]

[node name="Sprite2D" type="Sprite2D" parent="Control/TouchScreenButton"]
position = Vector2(48, 56)
scale = Vector2(0.0722222, 0.0722222)
texture = ExtResource("3_x0b3n")

[node name="Label" type="Label" parent="Control"]
layout_mode = 2
offset_top = 32.0
offset_right = 720.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8yghb")
theme_override_font_sizes/font_size = 30
text = "List of Games"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Sipa" to="." method="_on_sipa_pressed"]
[connection signal="released" from="CanvasLayer/Sipa" to="." method="_on_sipa_released"]
[connection signal="pressed" from="CanvasLayer/Eme" to="." method="_on_eme_pressed"]
[connection signal="released" from="CanvasLayer/Eme" to="." method="_on_eme_released"]
